# coding-agent-harness

./: .env.example  .gitignore  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: main.rs
crates/harness-cli/tests/: session_cli.rs
crates/harness-context/: Cargo.toml
crates/harness-context/src/: lib.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: lib.rs
crates/harness-db/: Cargo.toml
crates/harness-db/src/: lib.rs
crates/harness-events/: Cargo.toml
crates/harness-events/src/: lib.rs
crates/harness-models/: Cargo.toml
crates/harness-models/src/: lib.rs
crates/harness-policy/: Cargo.toml
crates/harness-policy/src/: lib.rs
crates/harness-runtime/: Cargo.toml
crates/harness-runtime/src/: lib.rs
crates/harness-runtime/tests/: postgres_session.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: lib.rs
docs/adr/: 0001-eventlog-as-source-of-truth.md  0001-eventlog-is-source-of-truth.md  0002-policy-gate-and-tool-runtime-boundary.md  0002-policy-gate-authorizes-tool-runtime-executes.md  0003-self-recovery-loop-boundaries.md  0003-self-recovery-loop-bounded-autonomy.md  0004-postgresql-first-runtime-sot.md  0004-postgresql-primary-runtime-source-of-truth.md  0005-v0-rust-workspace-crate-boundaries.md  0006-hybrid-model-and-agent-cli-strategy.md  0006-hybrid-model-and-governed-agent-cli-strategy.md  0007-codex-cli-first-external-agent-lane.md  0007-codex-cli-first-governed-external-lane.md  0008-v0-acceptance-end-to-end-self-recovering-task.md  0008-v0-end-to-end-acceptance.md
docs/agents/: domain.md  issue-tracker.md
docs/development/: checks.md  local-codex-cli-acceptance.md  postgresql.md  v0-acceptance.md  v0.4-observability-acceptance.md
docs/prd/: v0-self-recovering-agent-runtime.md  v0.1-v0.3-runtime-expansion.md
docs/releases/: v0.0.1.md
docs/research/: agent-runtime-benchmark-v4.zh.md  source-audited-research-protocol.zh.md
fixtures/v0-acceptance/: AGENTS.md  Cargo.toml
fixtures/v0-acceptance/src/: lib.rs
k8s/dev/: postgres.yaml
migrations/: 0001_runtime_baseline.sql  0002_task_queue.sql  0003_task_lease_recovery.sql
scripts/: apply-migrations.ps1
