[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
harness-runtime = { path = "../harness-runtime" }
harness-core = { path = "../harness-core" }
harness-db = { path = "../harness-db" }
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
