[package]
name = "harness-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
harness-events = { path = "../harness-events" }
harness-core = { path = "../harness-core" }
postgres.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
