[package]
name = "harness-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
harness-core = { path = "../harness-core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
