[package]
name = "harness-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
harness-policy = { path = "../harness-policy" }
harness-core = { path = "../harness-core" }

[lints]
workspace = true
